Ajout de la chaine de connexion dans le fichier Appsettings

--- a/Authentification.Role.DKA/appsettings.json
+++ b/Authentification.Role.DKA/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityUsers;Trusted_Connection=True;MultipleActiveResultSets=true"
 }
