Changement de la chaine de connexion dans lappsettings et implémentation du service dans le startup

--- a/Authentification.Role.DKA/appsettings.json
+++ b/Authentification.Role.DKA/appsettings.json
@@ -5,5 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityUsers;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ConnectionString": {
+    "DBUser": "data source=DESKTOP-T4QRC2H; initial catalog=DBUser; integrated security=true"
+  }
 }
