Correction de la chaine de connexion dans l'appsettings

--- a/Authentification.Role.DKA/appsettings.json
+++ b/Authentification.Role.DKA/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DBUser": "data source=DESKTOP-T4QRC2H; initial catalog=DBUser; integrated security=true"
   }
 }
