--- a/Authentification.Role.DKA/appsettings.json
+++ b/Authentification.Role.DKA/appsettings.json
@@ -7,5 +7,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DBUser": "data source=DESKTOP-T4QRC2H; initial catalog=DBUser; integrated security=true"
+  },
+  "Data": {
+    "AdminUser": {
+      "Name": "Disasi",
+      "Email": "anthonydisasi@gmail.com",
+      "Password": "secret",
+      "Role": "Admins"
+    }
   }
 }
